--- a/main/index.html
+++ b/main/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Portfolio</title>
+		<!--https://github.com/baebae98/baebae98.github.io-->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +18,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Portfolio</strong></a>
+									<a href="https://zlstl1.github.io/portfolio/main/index.html" class="logo"><strong>Portfolio</strong></a>
 									<ul class="icons">
 										<li><a href="https://github.com/zlstl1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
@@ -52,7 +53,7 @@
 										2016년 03월 ~ 2018년 02월 : 숭실대학교 전산원 컴퓨터 공학과 졸업</br>
 										2018년 01월 ~ 2018년 03월 : 한양대학교 컴퓨터 공학과(데이터베이스 연구실) 석사 자퇴</br>
 										2018년 03월 ~ 2018년 09월 : 비트교육센터 JAVA기반 빅데이터분석을 위한 고급인력 양성과정 수료</br>
-										2018년 13월 ~ 2023년 01월 : (주)디아이솔루션 재직</br>
+										2018년 11월 ~ 2023년 01월 : (주)디아이솔루션 재직</br>
 									</blockquote>
 
 									<h2>보유 자격증</h2>
@@ -62,6 +63,102 @@
 										정보처리 기사</br>
 										전파통신 기능사</br>
 									</blockquote>
+								</section>
+
+								<section>
+									<header class="main">
+										<h1>참여 프로젝트</h1>
+									</header>
+
+									<h2>AI/GPGPU</h2>
+									<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img002.PNG" alt="" /></span>GPU 병렬처리 기반 DCP 인코딩 클라우드 서비스 개발</br>[2018-11-01 ~ 2019-10-14]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img003.PNG" alt="" /></span>GPU HPC 기반의 360도 영상 스티칭 도구 및 클라우드 서비스 개발</br>[2018.12.01 ~ 2019.11.30]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img004.PNG" alt="" /></span>딥러닝기반 인공지능 기술을 이용한 95%이상 성능을 가지는 영상분석기술</br>[2019.06.26 ~ 2020.06.25]</div>
+
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img005.PNG" alt="" /></span>MIDI기반의 피아노연주 정밀분석 알고리즘과 GPU기반 실시간인코딩을 통한  지능형개인맞춤형 피아노 강습 솔루션</br>[2019.11.25 ~ 2021.11.24]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img007.PNG" alt="" /></span>교통 약자 주행 영상 AI데이터 구축</br>[2020.09.16 ~ 2020.12.31]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img009.PNG" alt="" /></span>유동 인구 분석을 위한 CCTV 영상 데이터 구축</br>[2021.07.01 ~ 2021.12.31]</div>
+										</div>
+									</div>
+
+									<h2>Android</h2>
+									<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img008.PNG" alt="" /></span>"23" 이형 디스플레이 시스템 내 번역/통역 기능을 이용할 수 있는 APP 개발</br>[2021.04.19 - 2021.08.30]</div>
+
+										</div>
+									</div>
+
+									<h2>Data</h2>
+									<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img001.PNG" alt="" /></span>교육지원을 위한 빅데이터 관리체계 수립 사업</br>[2018.11.01 ~ 2018.12.25]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img006.PNG" alt="" /></span>해운항만물류 BI 및 재난안전시스템 구축 사업 대시보드 개발</br>[2020.01.20 ~ 2020.05.21]</div>
+										</div>
+									</div>
+								</section>
+
+								<section>
+									<header class="main">
+										<h1>기술스택</h1>
+									</header>
+
+									<div class="row">
+										<div class="col-4">
+											<h4>Language</h4>
+											<blockquote>
+												JAVA </br>
+												PYTHON</br>
+												SQL</br>
+											</blockquote>
+										</div>
+										<div class="col-4">
+											<h4>FrontEnd</h4>
+											<blockquote>
+												HTML5</br>
+												CSS</br>
+												JavaScript(jquery)</br>
+												BootStrap</br>
+											</blockquote>
+										</div>
+										<div class="col-4">
+											<h4>BackEnd</h4>
+											<blockquote>
+												Spring</br>
+												JSP/JSTL</br>
+												GIT</br>
+											</blockquote>
+										</div>
+										<div class="col-4">
+											<h4>DataBase(DB)</h4>
+											<blockquote>
+												MariaDB</br>
+												Oracle</br>
+												MsSql</br>
+												MyBatis</br>
+											</blockquote>
+										</div>
+										<div class="col-4">
+											<h4>Cloud</h4>
+											<blockquote>
+												Amazon Web Services</br>
+												Ubuntu</br>
+											</blockquote>
+										</div>
+										<div class="col-4">
+											<h4>Tool</h4>
+											<blockquote>
+												Eclipse</br>
+												STS(Spring-tool-suite)</br>
+												Visual Studio</br>
+												Visual Studio Code</br>
+												Git</br>
+												Github</br>
+											</blockquote>
+										</div>
+									</div>
 								</section>
 						</div>
 					</div>
@@ -83,78 +180,40 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Overview</a></li>
+										<li><a href="https://zlstl1.github.io/portfolio/main/index.html">Main</a></li>
 										<li>
-											<span class="opener">AI</span>
+											<span class="opener">AI/GPGPU</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">Data</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">GPU 병렬처리 기반 DCP 인코딩 클라우드 서비스 개발</a></li>
+												<li><a href="#">GPU HPC 기반의 360도 영상 스티칭 도구 및 클라우드 서비스 개발</a></li>
+												<li><a href="#">딥러닝기반 인공지능 기술을 이용한 95%이상 성능을 가지는 영상분석기술</a></li>
+												<li><a href="#">MIDI기반의 피아노연주 정밀분석 알고리즘과 GPU기반 실시간인코딩을 통한  지능형개인맞춤형 피아노 강습 솔루션</a></li>
+												<li><a href="#">교통 약자 주행 영상 AI데이터 구축</a></li>
+												<li><a href="#">유동 인구 분석을 위한 CCTV 영상 데이터 구축</a></li>
+												<li><a href="#">TP 드론</a></li>
 											</ul>
 										</li>
 										<li>
 											<span class="opener">Android</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">"23" 이형 디스플레이 시스템 내 번역/통역 기능을 이용할 수 있는 APP 개발</a></li>
+												<li><a href="#">QR</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">Data</span>
+											<ul>
+												<li><a href="#">교육지원을 위한 빅데이터 관리체계 수립 사업</a></li>
+												<li><a href="#">해운항만물류 BI 및 재난안전시스템 구축 사업 대시보드 개발</a></li>
+												<li><a href="#">UPA/YGPA</a></li>
 											</ul>
 										</li>
 									</ul>
 								</nav>
 
-<!--							&lt;!&ndash; Section &ndash;&gt;-->
-<!--								<section>-->
-<!--									<header class="major">-->
-<!--										<h2>Ante interdum</h2>-->
-<!--									</header>-->
-<!--									<div class="mini-posts">-->
-<!--										<article>-->
-<!--											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>-->
-<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
-<!--										</article>-->
-<!--										<article>-->
-<!--											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>-->
-<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
-<!--										</article>-->
-<!--										<article>-->
-<!--											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>-->
-<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
-<!--										</article>-->
-<!--									</div>-->
-<!--									<ul class="actions">-->
-<!--										<li><a href="#" class="button">More</a></li>-->
-<!--									</ul>-->
-<!--								</section>-->
-
-<!--							&lt;!&ndash; Section2 &ndash;&gt;-->
-<!--								<section>-->
-<!--									<header class="major">-->
-<!--										<h2>Get in touch</h2>-->
-<!--									</header>-->
-<!--									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>-->
-<!--									<ul class="contact">-->
-<!--										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>-->
-<!--										<li class="icon solid fa-phone">(000) 000-0000</li>-->
-<!--										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />-->
-<!--										Nashville, TN 00000-0000</li>-->
-<!--									</ul>-->
-<!--								</section>-->
-
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">footer</p>
+									<p class="copyright">© Untitled. All rights reserved. Demo Images: Unsplash. Design: HTML5 UP.</p>
 								</footer>
 
 						</div>
