--- a/main/index.html
+++ b/main/index.html
@@ -18,7 +18,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="https://zlstl1.github.io/portfolio/main/index.html" class="logo"><strong>Portfolio</strong></a>
+									<a href="https://zlstl1.github.io/portfolio/main" class="logo"><strong>Portfolio</strong></a>
 									<ul class="icons">
 										<li><a href="https://github.com/zlstl1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
@@ -53,7 +53,7 @@
 										2016년 03월 ~ 2018년 02월 : 숭실대학교 전산원 컴퓨터 공학과 졸업</br>
 										2018년 01월 ~ 2018년 03월 : 한양대학교 컴퓨터 공학과(데이터베이스 연구실) 석사 자퇴</br>
 										2018년 03월 ~ 2018년 09월 : 비트교육센터 JAVA기반 빅데이터분석을 위한 고급인력 양성과정 수료</br>
-										2018년 11월 ~ 2023년 01월 : (주)디아이솔루션 재직</br>
+										2018년 11월 ~ 2023년 01월 : (주)디아이솔루션 재직
 									</blockquote>
 
 									<h2>보유 자격증</h2>
@@ -62,6 +62,12 @@
 										정보처리 산업기사</br>
 										정보처리 기사</br>
 										전파통신 기능사</br>
+										운전면허(1종보통)
+									</blockquote>
+
+									<h2>논문</h2>
+									<blockquote>
+										<a href="https://www.kais99.org/jkais/journal/Vol23No12/vol23no12p066.pdf">감염병 전파 차단을 위한 딥러닝 기반 모니터링 시스템 구현</a>
 									</blockquote>
 								</section>
 
@@ -73,20 +79,20 @@
 									<h2>AI/GPGPU</h2>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img002.PNG" alt="" /></span>GPU 병렬처리 기반 DCP 인코딩 클라우드 서비스 개발</br>[2018-11-01 ~ 2019-10-14]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img003.PNG" alt="" /></span>GPU HPC 기반의 360도 영상 스티칭 도구 및 클라우드 서비스 개발</br>[2018.12.01 ~ 2019.11.30]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img004.PNG" alt="" /></span>딥러닝기반 인공지능 기술을 이용한 95%이상 성능을 가지는 영상분석기술</br>[2019.06.26 ~ 2020.06.25]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai01';"><span class="image fit"><img src="images/img002.PNG" alt="" /></span>GPU 병렬처리 기반 DCP 인코딩 클라우드 서비스 개발</br>[2018-11-01 ~ 2019-10-14]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai02';"><span class="image fit"><img src="images/img003.PNG" alt="" /></span>GPU HPC 기반의 360도 영상 스티칭 도구 및 클라우드 서비스 개발</br>[2018.12.01 ~ 2019.11.30]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai03';"><span class="image fit"><img src="images/img004.PNG" alt="" /></span>딥러닝기반 인공지능 기술을 이용한 95%이상 성능을 가지는 영상분석기술</br>[2019.06.26 ~ 2020.06.25]</div>
 
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img005.PNG" alt="" /></span>MIDI기반의 피아노연주 정밀분석 알고리즘과 GPU기반 실시간인코딩을 통한  지능형개인맞춤형 피아노 강습 솔루션</br>[2019.11.25 ~ 2021.11.24]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img007.PNG" alt="" /></span>교통 약자 주행 영상 AI데이터 구축</br>[2020.09.16 ~ 2020.12.31]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img009.PNG" alt="" /></span>유동 인구 분석을 위한 CCTV 영상 데이터 구축</br>[2021.07.01 ~ 2021.12.31]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai04';"><span class="image fit"><img src="images/img005.PNG" alt="" /></span>MIDI기반의 피아노연주 정밀분석 알고리즘과 GPU기반 실시간인코딩을 통한  지능형개인맞춤형 피아노 강습 솔루션</br>[2019.11.25 ~ 2021.11.24]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai05';"><span class="image fit"><img src="images/img007.PNG" alt="" /></span>교통 약자 주행 영상 AI데이터 구축</br>[2020.09.16 ~ 2020.12.31]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai06';"><span class="image fit"><img src="images/img009.PNG" alt="" /></span>유동 인구 분석을 위한 CCTV 영상 데이터 구축</br>[2021.07.01 ~ 2021.12.31]</div>
 										</div>
 									</div>
 
 									<h2>Android</h2>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img008.PNG" alt="" /></span>"23" 이형 디스플레이 시스템 내 번역/통역 기능을 이용할 수 있는 APP 개발</br>[2021.04.19 - 2021.08.30]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/android01';"><span class="image fit"><img src="images/img008.PNG" alt="" /></span>"23" 이형 디스플레이 시스템 내 번역/통역 기능을 이용할 수 있는 APP 개발</br>[2021.04.19 - 2021.08.30]</div>
 
 										</div>
 									</div>
@@ -94,8 +100,8 @@
 									<h2>Data</h2>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img001.PNG" alt="" /></span>교육지원을 위한 빅데이터 관리체계 수립 사업</br>[2018.11.01 ~ 2018.12.25]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://naver.com';"><span class="image fit"><img src="images/img006.PNG" alt="" /></span>해운항만물류 BI 및 재난안전시스템 구축 사업 대시보드 개발</br>[2020.01.20 ~ 2020.05.21]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/data01';"><span class="image fit"><img src="images/img001.PNG" alt="" /></span>교육지원을 위한 빅데이터 관리체계 수립 사업</br>[2018.11.01 ~ 2018.12.25]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/data02';"><span class="image fit"><img src="images/img006.PNG" alt="" /></span>해운항만물류 BI 및 재난안전시스템 구축 사업 대시보드 개발</br>[2020.01.20 ~ 2020.05.21]</div>
 										</div>
 									</div>
 								</section>
@@ -176,39 +182,6 @@
 
 							<!-- Menu -->
 								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="https://zlstl1.github.io/portfolio/main/index.html">Main</a></li>
-										<li>
-											<span class="opener">AI/GPGPU</span>
-											<ul>
-												<li><a href="#">GPU 병렬처리 기반 DCP 인코딩 클라우드 서비스 개발</a></li>
-												<li><a href="#">GPU HPC 기반의 360도 영상 스티칭 도구 및 클라우드 서비스 개발</a></li>
-												<li><a href="#">딥러닝기반 인공지능 기술을 이용한 95%이상 성능을 가지는 영상분석기술</a></li>
-												<li><a href="#">MIDI기반의 피아노연주 정밀분석 알고리즘과 GPU기반 실시간인코딩을 통한  지능형개인맞춤형 피아노 강습 솔루션</a></li>
-												<li><a href="#">교통 약자 주행 영상 AI데이터 구축</a></li>
-												<li><a href="#">유동 인구 분석을 위한 CCTV 영상 데이터 구축</a></li>
-												<li><a href="#">TP 드론</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">Android</span>
-											<ul>
-												<li><a href="#">"23" 이형 디스플레이 시스템 내 번역/통역 기능을 이용할 수 있는 APP 개발</a></li>
-												<li><a href="#">QR</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">Data</span>
-											<ul>
-												<li><a href="#">교육지원을 위한 빅데이터 관리체계 수립 사업</a></li>
-												<li><a href="#">해운항만물류 BI 및 재난안전시스템 구축 사업 대시보드 개발</a></li>
-												<li><a href="#">UPA/YGPA</a></li>
-											</ul>
-										</li>
-									</ul>
 								</nav>
 
 							<!-- Footer -->
@@ -237,6 +210,7 @@
 						$("#main-content").empty()
 						$("#main-content").load("content/main2.html");
 					});
+					$("#menu").load("menu.html")
 				});
 			</script>
 
