--- a/main/index.html
+++ b/main/index.html
@@ -210,7 +210,7 @@
 						$("#main-content").empty()
 						$("#main-content").load("content/main2.html");
 					});
-					$("#menu").load("menu.html")
+					$("#menu").panel('refresh', 'menu.html')
 				});
 			</script>
 
