--- a/main/index.html
+++ b/main/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 	</head>
 	<body class="is-preload">
 
@@ -79,20 +80,20 @@
 									<h2>AI/GPGPU</h2>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai01';"><span class="image fit"><img src="images/img002.PNG" alt="" /></span>GPU 병렬처리 기반 DCP 인코딩 클라우드 서비스 개발</br>[2018-11-01 ~ 2019-10-14]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai02';"><span class="image fit"><img src="images/img003.PNG" alt="" /></span>GPU HPC 기반의 360도 영상 스티칭 도구 및 클라우드 서비스 개발</br>[2018.12.01 ~ 2019.11.30]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai03';"><span class="image fit"><img src="images/img004.PNG" alt="" /></span>딥러닝기반 인공지능 기술을 이용한 95%이상 성능을 가지는 영상분석기술</br>[2019.06.26 ~ 2020.06.25]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai01/ai01.html';"><span class="image fit"><img src="images/img002.PNG" alt="" /></span>GPU 병렬처리 기반 DCP 인코딩 클라우드 서비스 개발</br>[2018-11-01 ~ 2019-10-14]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai02/ai02.html';"><span class="image fit"><img src="images/img003.PNG" alt="" /></span>GPU HPC 기반의 360도 영상 스티칭 도구 및 클라우드 서비스 개발</br>[2018.12.01 ~ 2019.11.30]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai03/ai03.html';"><span class="image fit"><img src="images/img004.PNG" alt="" /></span>딥러닝기반 인공지능 기술을 이용한 95%이상 성능을 가지는 영상분석기술</br>[2019.06.26 ~ 2020.06.25]</div>
 
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai04';"><span class="image fit"><img src="images/img005.PNG" alt="" /></span>MIDI기반의 피아노연주 정밀분석 알고리즘과 GPU기반 실시간인코딩을 통한  지능형개인맞춤형 피아노 강습 솔루션</br>[2019.11.25 ~ 2021.11.24]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai05';"><span class="image fit"><img src="images/img007.PNG" alt="" /></span>교통 약자 주행 영상 AI데이터 구축</br>[2020.09.16 ~ 2020.12.31]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai06';"><span class="image fit"><img src="images/img009.PNG" alt="" /></span>유동 인구 분석을 위한 CCTV 영상 데이터 구축</br>[2021.07.01 ~ 2021.12.31]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai04/ai04.html';"><span class="image fit"><img src="images/img005.PNG" alt="" /></span>MIDI기반의 피아노연주 정밀분석 알고리즘과 GPU기반 실시간인코딩을 통한  지능형개인맞춤형 피아노 강습 솔루션</br>[2019.11.25 ~ 2021.11.24]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai05/ai05.html';"><span class="image fit"><img src="images/img007.PNG" alt="" /></span>교통 약자 주행 영상 AI데이터 구축</br>[2020.09.16 ~ 2020.12.31]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/ai06/ai06.html';"><span class="image fit"><img src="images/img009.PNG" alt="" /></span>유동 인구 분석을 위한 CCTV 영상 데이터 구축</br>[2021.07.01 ~ 2021.12.31]</div>
 										</div>
 									</div>
 
 									<h2>Android</h2>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/android01';"><span class="image fit"><img src="images/img008.PNG" alt="" /></span>"23" 이형 디스플레이 시스템 내 번역/통역 기능을 이용할 수 있는 APP 개발</br>[2021.04.19 - 2021.08.30]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/android01/android01.html';"><span class="image fit"><img src="images/img008.PNG" alt="" /></span>"23" 이형 디스플레이 시스템 내 번역/통역 기능을 이용할 수 있는 APP 개발</br>[2021.04.19 - 2021.08.30]</div>
 
 										</div>
 									</div>
@@ -100,8 +101,9 @@
 									<h2>Data</h2>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/data01';"><span class="image fit"><img src="images/img001.PNG" alt="" /></span>교육지원을 위한 빅데이터 관리체계 수립 사업</br>[2018.11.01 ~ 2018.12.25]</div>
-											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/data02';"><span class="image fit"><img src="images/img006.PNG" alt="" /></span>해운항만물류 BI 및 재난안전시스템 구축 사업 대시보드 개발</br>[2020.01.20 ~ 2020.05.21]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/data01/data01.html';"><span class="image fit"><img src="images/img001.PNG" alt="" /></span>교육지원을 위한 빅데이터 관리체계 수립 사업</br>[2018.11.01 ~ 2018.12.25]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/data02/data02.html';"><span class="image fit"><img src="images/img006.PNG" alt="" /></span>해운항만물류 BI 및 재난안전시스템 구축 사업 대시보드 개발</br>[2020.01.20 ~ 2020.05.21]</div>
+											<div class="col-4 portfolio-card" onclick="location.href='https://zlstl1.github.io/portfolio/main/data02/data03.html';"><span class="image fit"><img src="images/img006.PNG" alt="" /></span>2022년 울산항 데이터 통합을 위한 플랫폼 구축 용역</br>[2022.12.21 ~ 2023.04.28]</div>
 										</div>
 									</div>
 								</section>
@@ -200,19 +202,26 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 			<script>
-				$(document).ready(function () {
-					$(document).on("click", ".logo", function () {
-						$("#main-content").empty()
-						$("#main-content").load("content/main.html");
-					});
-					$(document).on("click", ".fa-github", function () {
-						$("#main-content").empty()
-						$("#main-content").load("content/main2.html");
-					});
-					$("#menu").load("menu.html")
-				});
+				fetch("menu.html")
+						.then(response => {
+							return response.text()
+						})
+						.then(data => {
+							document.querySelector("#menu").innerHTML = data;
+							var $menu = $('#menu')
+							$menu_openers = $menu.children('ul').find('.opener');
+							$menu_openers.each(function() {
+								var $this = $(this);
+								$this.on('click', function(event) {
+									event.preventDefault();
+									$menu_openers.not($this).removeClass('active');
+									$this.toggleClass('active');
+									$window.triggerHandler('resize.sidebar-lock');
+								});
+							});
+						});
 			</script>
-
 	</body>
 </html>
