--- a/main/index.html
+++ b/main/index.html
@@ -55,7 +55,7 @@
 										2016년 03월 ~ 2018년 02월 : 숭실대학교 전산원 컴퓨터 공학과 졸업</br>
 										2018년 01월 ~ 2018년 03월 : 한양대학교 컴퓨터 공학과(데이터베이스 연구실) 석사 자퇴</br>
 										2018년 03월 ~ 2018년 09월 : 비트교육센터 JAVA기반 빅데이터분석을 위한 고급인력 양성과정 수료</br>
-										2018년 11월 ~ 2024년 06월 : (주)디아이솔루션 재직
+										2018년 11월 ~ 2024년 06월 : (주)디아이솔루션 재직</br>
 										2024년 06월 ~ 현재 : BNK시스템 재직
 									</blockquote>
 
@@ -64,8 +64,9 @@
 										네트워크 관리사 2급</br>
 										정보처리 산업기사</br>
 										정보처리 기사</br>
+										SQLD</br>
 										전파통신 기능사</br>
-										운전면허(1종보통)
+										운전면허(1종보통
 									</blockquote>
 
 									<h2>논문</h2>
